Troubleshooting and adding link between views